--- a/src/Nager.Holiday/Nager.Holiday.csproj
+++ b/src/Nager.Holiday/Nager.Holiday.csproj
@@ -20,7 +20,7 @@
 
     <TargetFrameworks>netstandard2.1</TargetFrameworks>
 
-    <Version>1.0.0</Version>
+    <Version>1.0.1</Version>
     
     <Nullable>enable</Nullable>
   </PropertyGroup>
@@ -34,7 +34,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="..\..\doc\README.md" Pack="true" PackagePath="\" />
+    <None Include="README.md" Pack="true" PackagePath="\" />
     <None Include="..\..\doc\logo.png" Pack="true" PackagePath="\" Visible="false" />
   </ItemGroup>
 
